update Template Switch Tumbler html css

--- a/switch_tumbler/index.html
+++ b/switch_tumbler/index.html
@@ -7,6 +7,39 @@
     <title>Template Switch Tumbler</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Switch toggle</h1>
+      <label class="checkbox" for="checkbox">
+        <input
+          class="checkbox__inp"
+          type="checkbox"
+          id="checkbox"
+          name="checkbox"
+        />
+        <span class="checkbox_name">Switch</span>
+      </label>
+
+      <label class="checkbox" for="checkbox2">
+        <input
+          class="checkbox__inp"
+          type="checkbox"
+          id="checkbox2"
+          name="checkbox"
+        />
+        <span class="checkbox_name">Switch</span>
+      </label>
+
+      <label class="checkbox" for="checkbox3">
+        <input
+          class="checkbox__inp"
+          type="checkbox"
+          id="checkbox3"
+          name="checkbox"
+        />
+        <span class="checkbox_name">Switch</span>
+      </label>
+    </div>
+
     <script src="./main.js"></script>
   </body>
 </html>
